Fix logo gradient not working on some Safari and Blink-based browsers (#18634)
Works around https://bugs.chromium.org/p/chromium/issues/detail?id=258029

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -50,6 +50,6 @@
             %fefuncg{:tablevalues => "0 .1 .3 .75 1", :type => "table"}
             %fefuncb{:tablevalues => "0 .55 1", :type => "table"}
 
-    .logo-resources
+    .logo-resources{ 'tabindex' => '-1', 'inert' => true, 'aria-hidden' => true }
       = render_symbol :icon
       = render_symbol :wordmark
