--- a/app/views/settings/preferences/other/show.html.haml
+++ b/app/views/settings/preferences/other/show.html.haml
@@ -37,7 +37,7 @@
 
   .fields-group
     = f.input :setting_purple_shades, as: :boolean, wrapper: :with_label, label: "Purple shades"
-    = f.input :setting_photorealistic_mascot, as: :boolean, wrapper: :with_label, label: "Photo-realistic mascot"
+    //= f.input :setting_photorealistic_mascot, as: :boolean, wrapper: :with_label, label: "Photo-realistic mascot"
 
   .actions
     = f.button :button, t('generic.save_changes'), type: :submit
