remove custom settings for now

--- a/app/views/settings/preferences/appearance/show.html.haml
+++ b/app/views/settings/preferences/appearance/show.html.haml
@@ -26,7 +26,7 @@
 
     .fields-group
       = ff.input :'web.advanced_layout', wrapper: :with_label, hint: false, label: I18n.t('simple_form.labels.defaults.setting_advanced_layout')
-      = ff.input :'web.setting_wide_columns', as: :boolean, wrapper: :with_label, label: "Use wide columns in advanced web interface"
+      -# = ff.input :'web.setting_wide_columns', as: :boolean, wrapper: :with_label, label: "Use wide columns in advanced web interface"
     .fields-group
     %h4= t 'appearance.animations_and_accessibility'
 
