--- a/app/javascript/styles/chitter-bright.scss
+++ b/app/javascript/styles/chitter-bright.scss
@@ -203,7 +203,7 @@ $ui-inverted-highlight-color: $ui-highlight-color;
     color: #ddd;
   }
   &.overlayed {
-    background-color: rgba(255,255,255,0.7);
+    // background-color: rgba(255,255,255,0.7);
     &:hover, &:active, &:focus {
       background-color: rgba(255,255,255,1);
     }
